[package]
name = "canary-deployments-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.26"
octocrab = "0.25.0"
regex = "1.8.3"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
